fix: fix dark mode again!

--- a/src/layouts/all.sass
+++ b/src/layouts/all.sass
@@ -28,12 +28,12 @@ $navbar-breakpoint: 1200px
   justify-content: center
 
 @media screen and (max-width: 450px)
-	.brand
-		a
-			font-size: 5vmin
-			
-		#airplane
-  		display: none
+    .brand
+        a
+            font-size: 5vmin
+
+        #airplane
+            display: none
 
 .arrow
 	user-select: none
@@ -73,3 +73,5 @@ html.dark-mode
         background: $dark !important
     .navbar
         background: $dark !important
+    .navbar-burger
+        color: #ffffff !important
